--- a/modules/layout/main.html.header.html
+++ b/modules/layout/main.html.header.html
@@ -3,16 +3,16 @@
         <div id=brand__ID>
             <a class="navbar-brand d-none d-lg-inline-block" onclick="$vm.nav_load_module('panel_main_home');">
             	<div class=large_logo__ID>
-    	        	<img width=360 src='images/logo.gif' style='margin-top:10px;margin-bottom:10px'></img>
+    	        	<img width=160px src='__CURRENT_PATH__/main.html.header.html.isleephealth.png' style='margin-top:10px;margin-bottom:10px'></img>
     				<div class="logo_label__ID">
     	                <div class="large_logo_large_label__ID">
-    	                    Clinic
+    	                    Integrated Sleep Health - Patient Portal
     	                </div>
     	            </div>
     	        </div>
             </a>
             <a class="navbar-brand d-lg-none" onclick="$vm.nav_load_module('panel_main_home');">
-                <div class=small_logo__ID>Woolcock</div>
+                <div class=small_logo__ID>Integrated Sleep Health<br>Patient Portal</div>
             </a>
         </div>
     </nav>
