--- a/layout/main.html.header.html
+++ b/layout/main.html.header.html
@@ -1,7 +1,7 @@
 <div header id=header__ID>
     <nav id=nav__ID class="navbar navbar-expand-md navbar-dark">
         <div id=brand__ID>
-            <a class="navbar-brand d-none d-lg-inline-block" onclick="$vm.nav_load_module('panel_main_home');">
+            <a class="navbar-brand d-none d-lg-inline-block" onclick="$vm.nav_load_module('website_home');">
             	<div class=large_logo__ID>
     	        	<img width=160px src='__CURRENT_PATH__/main.html.header.html.isleephealth.png' style='margin-top:10px;margin-bottom:10px'></img>
     				<div class="logo_label__ID">
@@ -11,7 +11,7 @@
     	            </div>
     	        </div>
             </a>
-            <a class="navbar-brand d-lg-none" onclick="$vm.nav_load_module('panel_main_home');">
+            <a class="navbar-brand d-lg-none" onclick="$vm.nav_load_module('website_home');">
                 <div class=small_logo__ID>Integrated Sleep Health<br>Patient Portal</div>
             </a>
         </div>
