--- a/layout/main.html
+++ b/layout/main.html
@@ -169,6 +169,7 @@ VmInclude:/layout/main.html.footer.html
 	}
 </script>
 <style main-layout-css>
+@import url('https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans|Roboto+Slab');
     .vm_module{
         position:absolute;
         width:100%;
