--- a/modules/initial/mirror/task-form.css
+++ b/modules/initial/mirror/task-form.css
@@ -132,7 +132,7 @@
         color:#fff;
     }
     #D__ID .radiobuttons:hover input ~ .checkmark {
-        background-color: #003E4D;
+        background-color: #006E7D;
     }
     #D__ID .radiobuttons input:checked ~ .checkmark {
         background-color: #003E4D;
@@ -154,6 +154,10 @@
         height: 8px;
         border-radius: 50%;
         background: white !important;
+    }
+    #D__ID .container .checkmark.no-dot:after {
+        width: 0;
+        height: 0;
     }
     /* CHECK BOX */
     #D__ID .checkboxes {
